Add non-bootstrap styling and content for future grid

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Vacation</title>
   </head>
   <body>
@@ -30,6 +31,52 @@
         <p>Something someone said at some point about one of these locations</p>
         <footer>Some Guy</footer>
       </blockquote>
+
+      <h2>Our Packages</h2>
+
+      <h3>You Can't Afford It</h3>
+      <p>Cost: Only $1 billion</p>
+      <p>Dates: Year round</p>
+      <p>Length: All year long</p>
+      <p>Included Activities:</p>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+
+      <h3>Gold</h3>
+      <p>Cost: $300</p>
+      <p>Dates: May to September</p>
+      <p>Length: 2 weeks</p>
+      <p>Included Activities:</p>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+
+      <h3>Silver</h3>
+      <p>Cost: $150</p>
+      <p>Dates: July and August</p>
+      <p>Length: 2 days</p>
+      <p>Included Activities:</p>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+
+      <h3>Bronze</h3>
+      <p>Cost: $10</p>
+      <p>Dates: February 29</p>
+      <p>Length: 2 hours</p>
+      <p>Included Activities:</p>
+      <ul>
+        <li>Pay for your own travel expenses (flight, toilet paper, etc.)</li>
+        <li>Rent an inner tube and a stick</li>
+        <li>Not-so-exclusive access to your motel's pool</li>
+      </ul>
 
     </div>
   </body>
