Add grid to page

--- a/index.html
+++ b/index.html
@@ -34,49 +34,61 @@
 
       <h2>Our Packages</h2>
 
-      <h3>You Can't Afford It</h3>
-      <p>Cost: Only $1 billion</p>
-      <p>Dates: Year round</p>
-      <p>Length: All year long</p>
-      <p>Included Activities:</p>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+      <div class="row">
+        <div class="col-md-6">
+          <h3>You Can't Afford It</h3>
+          <p>Cost: Only $1 billion</p>
+          <p>Dates: Year round</p>
+          <p>Length: All year long</p>
+          <p>Included Activities:</p>
+          <ul>
+            <li>IF you have the money,</li>
+            <li>YOU can do anything you want,</li>
+            <li>ANYWHERE you want TO!</li>
+          </ul>
+        </div>
 
-      <h3>Gold</h3>
-      <p>Cost: $300</p>
-      <p>Dates: May to September</p>
-      <p>Length: 2 weeks</p>
-      <p>Included Activities:</p>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+        <div class="col-md-6">
+          <h3>Gold</h3>
+          <p>Cost: $300</p>
+          <p>Dates: May to September</p>
+          <p>Length: 2 weeks</p>
+          <p>Included Activities:</p>
+          <ul>
+            <li>WE don't enjoy it with you,</li>
+            <li>HOWEVER, you still get to provide everything</li>
+            <li>NEEDED to enjoy it!</li>
+          </ul>
+        </div>
+      </div>
 
-      <h3>Silver</h3>
-      <p>Cost: $150</p>
-      <p>Dates: July and August</p>
-      <p>Length: 2 days</p>
-      <p>Included Activities:</p>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Silver</h3>
+          <p>Cost: $150</p>
+          <p>Dates: July and August</p>
+          <p>Length: 2 days</p>
+          <p>Included Activities:</p>
+          <ul>
+            <li>We help you enjoy your package, </li>
+            <li>HOWEVER, you get to provide everything you</li>
+            <li>NEED to enjoy it!</li>
+          </ul>
+        </div>
 
-      <h3>Bronze</h3>
-      <p>Cost: $10</p>
-      <p>Dates: February 29</p>
-      <p>Length: 2 hours</p>
-      <p>Included Activities:</p>
-      <ul>
-        <li>Pay for your own travel expenses (flight, toilet paper, etc.)</li>
-        <li>Rent an inner tube and a stick</li>
-        <li>Not-so-exclusive access to your motel's pool</li>
-      </ul>
+        <div class="col-md-6">
+          <h3>Bronze</h3>
+          <p>Cost: $10</p>
+          <p>Dates: February 29</p>
+          <p>Length: 2 hours</p>
+          <p>Included Activities:</p>
+          <ul>
+            <li>Pay for your own travel expenses (flight, toilet paper, etc.)</li>
+            <li>Rent an inner tube and a stick</li>
+            <li>Not-so-exclusive access to your motel's pool</li>
+          </ul>
+        </div>
+      </div>
 
     </div>
   </body>
